fix: mejorar indicación visual de token guardado en GitHub
PROBLEMA:
- El token se guardaba correctamente en localStorage
- Pero al recargar, el campo password no mostraba visualmente el valor
- Usuario pensaba que debía configurar de nuevo

SOLUCIÓN:
- Actualizar placeholder para indicar 'Token guardado'
- Mostrar mensaje más claro al guardar configuración
- Agregar nota que se guarda automáticamente en navegador
- Mejorar feedback visual en estado de sincronización

El token SÍ persiste entre recargas, ahora es más obvio.

--- a/index.html
+++ b/index.html
@@ -551,10 +551,11 @@
                             <label for="github-token">Token de GitHub (Personal Access Token)</label>
                             <div style="display: flex; gap: 10px;">
                                 <input type="password" id="github-token" placeholder="ghp_xxxxxxxxxxxx" style="flex: 1;">
-                                <button class="btn btn-secundario btn-pequeno" onclick="toggleVerToken()">👁️</button>
+                                <button class="btn btn-secundario btn-pequeno" onclick="toggleVerToken()" title="Mostrar/Ocultar token">👁️</button>
                             </div>
-                            <small style="color: var(--color-texto-terciario);">
-                                <a href="#" onclick="mostrarAyudaGitHub()" style="color: var(--color-primario);">¿Cómo obtener un token?</a>
+                            <small style="color: var(--color-texto-terciario); display: block; margin-top: 5px;">
+                                <a href="#" onclick="mostrarAyudaGitHub()" style="color: var(--color-primario);">¿Cómo obtener un token?</a> • 
+                                <strong style="color: var(--color-exito);">Se guarda automáticamente en tu navegador</strong>
                             </small>
                         </div>
                         <div class="campo" style="margin-bottom: 10px;">
