feat: Protecciones de seguridad para GitHub Gist
PROTECCIONES AGREGADAS:

1. ⚠️ Validación antes de sincronizar:
   - Advertencia si se intenta sincronizar datos vacíos
   - Confirmación con resumen detallado (movimientos, categorías, recurrentes)
   - Previene sobrescribir backups con datos vacíos

2. 🛡️ Validación antes de descargar:
   - Advertencia si GitHub tiene datos vacíos
   - Resumen de lo que se descargará vs datos actuales
   - Link directo al historial de versiones para verificar

3. 💾 Backup automático de emergencia:
   - Se crea automáticamente antes de descargar desde GitHub
   - Guarda en localStorage: finanzas_backup_emergencia
   - Recuperable con botón 'Backup de Emergencia'

4. ⏮️ Restaurar versión anterior:
   - Función restaurarVersionAnteriorGitHub()
   - Descarga automáticamente la segunda versión más reciente
   - Útil si se sincronizó por error

5. 🔄 Restaurar backup de emergencia:
   - Función restaurarBackupEmergencia()
   - Recupera el último backup automático
   - Sin necesidad de acceder a GitHub

INTERFAZ:
- Nuevos botones en sección GitHub Gist:
  * ⏮️ Restaurar Versión Anterior (amarillo)
  * 🔄 Backup de Emergencia (secundario)
- Estilo btn-advertencia agregado (amarillo)
- Zona de recuperación destacada con borde amarillo

RESULTADO: Imposible perder datos por error. Múltiples capas de protección.

--- a/index.html
+++ b/index.html
@@ -577,6 +577,21 @@
                         <button class="btn btn-secundario" onclick="cargarDesdeGitHub()">📥 Descargar de GitHub</button>
                     </div>
                     
+                    <!-- Opciones de recuperación de emergencia -->
+                    <div style="margin-top: 15px; padding: 12px; background: var(--color-fondo-secundario); border-radius: 8px; border-left: 3px solid var(--color-advertencia);">
+                        <p style="font-size: 0.85rem; margin-bottom: 10px; color: var(--color-texto-secundario);">
+                            🆘 <strong>Recuperación de Emergencia:</strong>
+                        </p>
+                        <div class="btn-grupo">
+                            <button class="btn btn-advertencia btn-pequeno" onclick="restaurarVersionAnteriorGitHub()" title="Restaura la versión anterior de GitHub si sincronizaste por error">
+                                ⏮️ Restaurar Versión Anterior
+                            </button>
+                            <button class="btn btn-secundario btn-pequeno" onclick="restaurarBackupEmergencia()" title="Restaura el backup automático creado antes de la última descarga">
+                                🔄 Backup de Emergencia
+                            </button>
+                        </div>
+                    </div>
+                    
                     <div class="sync-status" id="github-status" style="margin-top: 10px;">
                         <span class="sync-icon">☁️</span>
                         <span id="github-texto">No configurado</span>
